[ci skip] quick example to select a subset of column with randomized search via column selection 520a9b8f98f2e942779709953acf63ac20450cf5

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "03fc0fd9",
+   "id": "5d3cff2d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c71c5a7b",
+   "id": "4fba301e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86d17db0",
+   "id": "157ed09d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ebb862f",
+   "id": "ab8f28a1",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95451423",
+   "id": "d3fb8807",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad1420ac",
+   "id": "b9d9bb1d",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "044195dd",
+   "id": "dbb12add",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b1642da",
+   "id": "62c9ea61",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee824905",
+   "id": "61fc738c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac88d07f",
+   "id": "85d1adec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48ef2da6",
+   "id": "76810810",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "556201e7",
+   "id": "b807e593",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d211cb2a",
+   "id": "aa13810f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3fc6ed4",
+   "id": "7a9a7c53",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ee41a70",
+   "id": "413fd9d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06862c25",
+   "id": "b95b31f9",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d61bb813",
+   "id": "b83cf08e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d289184",
+   "id": "301dd9cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "719d6f47",
+   "id": "c7b0e5f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d88854d",
+   "id": "0ef50cbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d041e50b",
+   "id": "4828803b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ca88e64",
+   "id": "5b086050",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98d278fd",
+   "id": "44f1f6f4",
    "metadata": {},
    "source": [
     "\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72c88c70",
+   "id": "776c52c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ea62df8",
+   "id": "3efa7319",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4a701db",
+   "id": "8a7ca1f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83c415c5",
+   "id": "2239ea01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b55bd1bf",
+   "id": "0d4d2d31",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "291342fb",
+   "id": "4c33a309",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2b2ea2e",
+   "id": "6730772b",
    "metadata": {},
    "source": [
     "\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35a57c37",
+   "id": "ed71dea1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "718837fb",
+   "id": "69dae616",
    "metadata": {},
    "source": [
     "\n",
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9937c66e",
+   "id": "bfa2718f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd90527c",
+   "id": "5adc6f1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "932eca91",
+   "id": "4c77e192",
    "metadata": {},
    "source": [
     "\n",
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdfdf2ba",
+   "id": "0f48afb2",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5a63010",
+   "id": "1b60e9c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cef997a",
+   "id": "10af47de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97bfc1ed",
+   "id": "e9fa4c1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f78ddb43",
+   "id": "6f69ad8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55e2d7fd",
+   "id": "d9d58ee9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc8f2ca9",
+   "id": "cb160538",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78653c41",
+   "id": "c9f4ae5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4584b73",
+   "id": "99a3651f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f39a05fa",
+   "id": "4f0e72ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3914cea6",
+   "id": "85f5bfae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0385ab4a",
+   "id": "160d1c02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dbff550",
+   "id": "ad290233",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -867,7 +867,70 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cd38c22",
+   "id": "ab020d73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = features.skb.apply(\n",
+    "    skrub.SelectCols(\n",
+    "        cols=skrub.choose_from(\n",
+    "            [\n",
+    "                skrub.selectors.all(),\n",
+    "                skrub.selectors.filter_names(\n",
+    "                    lambda name: name.startswith(\"load_mw_\"),\n",
+    "                ),\n",
+    "                skrub.selectors.filter_names(\n",
+    "                    lambda name: name.startswith(\"load_mw_\") or name.startswith(\"temperature_\"),\n",
+    "                ),\n",
+    "                skrub.selectors.filter_names(\n",
+    "                    lambda name: name.startswith(\"load_mw_\") or name.startswith(\"precipitation_\"),\n",
+    "                ),\n",
+    "                skrub.selectors.filter_names(\n",
+    "                    lambda name: name.startswith(\"load_mw_\") or name.startswith(\"wind_speed_\"),\n",
+    "                ),\n",
+    "                skrub.selectors.filter_names(\n",
+    "                    lambda name: name.startswith(\"load_mw_\") or name.startswith(\"cloud_cover_\"),\n",
+    "                ),\n",
+    "                # calendar features\n",
+    "                skrub.selectors.filter_names(\n",
+    "                    lambda name: name.startswith(\"load_mw_\") or name.endswith(\"_fr\"),\n",
+    "                ),\n",
+    "            ]\n",
+    "        )\n",
+    "    )\n",
+    ").skb.apply(\n",
+    "    HistGradientBoostingRegressor(\n",
+    "        random_state=0,\n",
+    "        learning_rate=skrub.choose_float(\n",
+    "            0.01, 0.9, default=0.1, log=True, name=\"learning_rate\"\n",
+    "        ),\n",
+    "    ),\n",
+    "    y=target,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d17c01a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "randomized_search = predictions.skb.get_randomized_search(\n",
+    "    cv=ts_cv_3,\n",
+    "    scoring=\"r2\",\n",
+    "    n_iter=30,\n",
+    "    fitted=True,\n",
+    "    verbose=1,\n",
+    "    n_jobs=-1,\n",
+    ")\n",
+    "randomized_search.results_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "851217f8",
    "metadata": {},
    "outputs": [],
    "source": []
