--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cdd1c099",
+   "id": "6c9b3cd0",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eec72997",
+   "id": "05ed7140",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7180e099",
+   "id": "461a460f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76e3c6d9",
+   "id": "b9f3916f",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65d6eec9",
+   "id": "73746de3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0646c76",
+   "id": "786d2412",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3023dec",
+   "id": "bcadb2d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72936d84",
+   "id": "9f120dd8",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60b0961c",
+   "id": "b895be7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71df86c4",
+   "id": "b5b149a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cc89fd4",
+   "id": "b95b60b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58e012d9",
+   "id": "30f22b23",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "651914b8",
+   "id": "0a07c8d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "862c60b3",
+   "id": "201f03b3",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca4f988d",
+   "id": "5cd8596f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d6c543a",
+   "id": "6f1a1c1a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "499ce4da",
+   "id": "c6f5264c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e6f3a83",
+   "id": "cbe9c50e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4acdfd76",
+   "id": "736dcf8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6680c67e",
+   "id": "8cb5bc52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faf266ad",
+   "id": "33cbb971",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "299a65cf",
+   "id": "d73e517f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94cf6119",
+   "id": "7807294e",
    "metadata": {},
    "source": [
     "\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fe0f94d",
+   "id": "ec64ad7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f86462b",
+   "id": "18f96d3d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121ce26c",
+   "id": "d418f4aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0ccbaa6",
+   "id": "c04b16f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "707991e3",
+   "id": "7c9b3486",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c595441e",
+   "id": "3ec5aa3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3f84ee9",
+   "id": "490bdd68",
    "metadata": {},
    "source": [
     "\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c50e3fd",
+   "id": "2b12ed94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "936670d2",
+   "id": "b0d25b5d",
    "metadata": {},
    "source": [
     "\n",
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "408c5985",
+   "id": "993d5ca4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "977adc93",
+   "id": "9cd2d131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "046dd368",
+   "id": "296312a5",
    "metadata": {},
    "source": [
     "\n",
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a27ff057",
+   "id": "2da05318",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e0e18c3",
+   "id": "a6b1423e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5615646e",
+   "id": "6a91e4d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "024e46b2",
+   "id": "e699c7d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d46a4251",
+   "id": "37addfc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b641722c",
+   "id": "90b537d2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fb37878",
+   "id": "a38ba92b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2cf044f",
+   "id": "7ad100bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "468bcb2c",
+   "id": "2791189e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee1512d0",
+   "id": "11d11121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed492385",
+   "id": "8f5e1941",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6760ecf1",
+   "id": "f74e4117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dc8356e",
+   "id": "42b56fd4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -867,7 +867,70 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9cb1df1",
+   "id": "eb40ba88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = features.skb.apply(\n",
+    "    skrub.SelectCols(\n",
+    "        cols=skrub.choose_from(\n",
+    "            [\n",
+    "                skrub.selectors.all(),\n",
+    "                skrub.selectors.filter_names(\n",
+    "                    lambda name: name.startswith(\"load_mw_\"),\n",
+    "                ),\n",
+    "                skrub.selectors.filter_names(\n",
+    "                    lambda name: name.startswith(\"load_mw_\") or name.startswith(\"temperature_\"),\n",
+    "                ),\n",
+    "                skrub.selectors.filter_names(\n",
+    "                    lambda name: name.startswith(\"load_mw_\") or name.startswith(\"precipitation_\"),\n",
+    "                ),\n",
+    "                skrub.selectors.filter_names(\n",
+    "                    lambda name: name.startswith(\"load_mw_\") or name.startswith(\"wind_speed_\"),\n",
+    "                ),\n",
+    "                skrub.selectors.filter_names(\n",
+    "                    lambda name: name.startswith(\"load_mw_\") or name.startswith(\"cloud_cover_\"),\n",
+    "                ),\n",
+    "                # calendar features\n",
+    "                skrub.selectors.filter_names(\n",
+    "                    lambda name: name.startswith(\"load_mw_\") or name.endswith(\"_fr\"),\n",
+    "                ),\n",
+    "            ]\n",
+    "        )\n",
+    "    )\n",
+    ").skb.apply(\n",
+    "    HistGradientBoostingRegressor(\n",
+    "        random_state=0,\n",
+    "        learning_rate=skrub.choose_float(\n",
+    "            0.01, 0.9, default=0.1, log=True, name=\"learning_rate\"\n",
+    "        ),\n",
+    "    ),\n",
+    "    y=target,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67560190",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "randomized_search = predictions.skb.get_randomized_search(\n",
+    "    cv=ts_cv_3,\n",
+    "    scoring=\"r2\",\n",
+    "    n_iter=30,\n",
+    "    fitted=True,\n",
+    "    verbose=1,\n",
+    "    n_jobs=-1,\n",
+    ")\n",
+    "randomized_search.results_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04c8d6b2",
    "metadata": {},
    "outputs": [],
    "source": []
