--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5d3cff2d",
+   "id": "3171d17a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fba301e",
+   "id": "9944ad42",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "157ed09d",
+   "id": "6be9ccfb",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab8f28a1",
+   "id": "6afe7db7",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3fb8807",
+   "id": "d27064f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9d9bb1d",
+   "id": "c4ff71c8",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbb12add",
+   "id": "8bbfdd57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62c9ea61",
+   "id": "c96ad325",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61fc738c",
+   "id": "013fc868",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85d1adec",
+   "id": "f9105176",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76810810",
+   "id": "cfa81aef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b807e593",
+   "id": "8fbcf10c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa13810f",
+   "id": "ea3f7caf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a9a7c53",
+   "id": "b17762e8",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "413fd9d3",
+   "id": "059d1347",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b95b31f9",
+   "id": "fe0b77ad",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b83cf08e",
+   "id": "7d4b24e7",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "301dd9cf",
+   "id": "f3c82521",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7b0e5f1",
+   "id": "f8bed6bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ef50cbd",
+   "id": "c8127f55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4828803b",
+   "id": "abfae5ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b086050",
+   "id": "4020bd55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44f1f6f4",
+   "id": "1cba8156",
    "metadata": {},
    "source": [
     "\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "776c52c3",
+   "id": "d93bef43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3efa7319",
+   "id": "483121f1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a7ca1f1",
+   "id": "daa35ff8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2239ea01",
+   "id": "63602fa9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d4d2d31",
+   "id": "60a7b4e5",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c33a309",
+   "id": "d56b9ade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6730772b",
+   "id": "a5720df1",
    "metadata": {},
    "source": [
     "\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed71dea1",
+   "id": "a737b8c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69dae616",
+   "id": "9aaefa16",
    "metadata": {},
    "source": [
     "\n",
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfa2718f",
+   "id": "7e10ba04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5adc6f1f",
+   "id": "bb3bdaf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c77e192",
+   "id": "f62a5058",
    "metadata": {},
    "source": [
     "\n",
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f48afb2",
+   "id": "bf365afc",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b60e9c9",
+   "id": "6cdfd82c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10af47de",
+   "id": "06f6aa1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9fa4c1a",
+   "id": "7efafbe6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f69ad8f",
+   "id": "15addcb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9d58ee9",
+   "id": "b57892c7",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb160538",
+   "id": "9c0415da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9f4ae5f",
+   "id": "a35d5325",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99a3651f",
+   "id": "18116e66",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f0e72ed",
+   "id": "f30fb63f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85f5bfae",
+   "id": "30bbe22d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,18 +840,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "160d1c02",
+   "id": "e36ab798",
    "metadata": {},
    "outputs": [],
    "source": [
     "for outer_cv_idx in range(len(nested_cv_results)):\n",
-    "    print(nested_cv_results.loc[outer_cv_idx, \"pipeline\"].results_.loc[0].round(3).to_dict())"
+    "    print(\n",
+    "        nested_cv_results.loc[outer_cv_idx, \"pipeline\"]\n",
+    "        .results_.loc[0]\n",
+    "        .round(3)\n",
+    "        .to_dict()\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad290233",
+   "id": "938d1311",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -867,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab020d73",
+   "id": "8fe66ae5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,16 +885,20 @@
     "                    lambda name: name.startswith(\"load_mw_\"),\n",
     "                ),\n",
     "                skrub.selectors.filter_names(\n",
-    "                    lambda name: name.startswith(\"load_mw_\") or name.startswith(\"temperature_\"),\n",
+    "                    lambda name: name.startswith(\"load_mw_\")\n",
+    "                    or name.startswith(\"temperature_\"),\n",
     "                ),\n",
     "                skrub.selectors.filter_names(\n",
-    "                    lambda name: name.startswith(\"load_mw_\") or name.startswith(\"precipitation_\"),\n",
+    "                    lambda name: name.startswith(\"load_mw_\")\n",
+    "                    or name.startswith(\"precipitation_\"),\n",
     "                ),\n",
     "                skrub.selectors.filter_names(\n",
-    "                    lambda name: name.startswith(\"load_mw_\") or name.startswith(\"wind_speed_\"),\n",
+    "                    lambda name: name.startswith(\"load_mw_\")\n",
+    "                    or name.startswith(\"wind_speed_\"),\n",
     "                ),\n",
     "                skrub.selectors.filter_names(\n",
-    "                    lambda name: name.startswith(\"load_mw_\") or name.startswith(\"cloud_cover_\"),\n",
+    "                    lambda name: name.startswith(\"load_mw_\")\n",
+    "                    or name.startswith(\"cloud_cover_\"),\n",
     "                ),\n",
     "                # calendar features\n",
     "                skrub.selectors.filter_names(\n",
@@ -912,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d17c01a",
+   "id": "d2a6d69c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +939,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "851217f8",
+   "id": "1bfd006f",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcefa8c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nested_cv_results = skrub.cross_validate(\n",
+    "    environment=predictions.skb.get_data(),\n",
+    "    pipeline=randomized_search,\n",
+    "    cv=ts_cv_5,\n",
+    "    scoring={\n",
+    "        \"r2\": get_scorer(\"r2\"),\n",
+    "        \"mape\": mape_scorer,\n",
+    "    },\n",
+    "    n_jobs=-1,\n",
+    "    return_pipeline=True,\n",
+    ").round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1130ce3",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": [
+    "nested_cv_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1e25aa4",
    "metadata": {},
    "outputs": [],
    "source": []
