--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6c9b3cd0",
+   "id": "5e5561d2",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05ed7140",
+   "id": "bfba26db",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "461a460f",
+   "id": "067bbe9e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9f3916f",
+   "id": "5f7670fd",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73746de3",
+   "id": "8313509f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "786d2412",
+   "id": "386e7ccd",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcadb2d6",
+   "id": "136ca316",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f120dd8",
+   "id": "cc351e5d",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b895be7f",
+   "id": "ba6bc81e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5b149a2",
+   "id": "145a6626",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b95b60b2",
+   "id": "c6ff84b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30f22b23",
+   "id": "b3df79d3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a07c8d4",
+   "id": "0793c12e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "201f03b3",
+   "id": "85497799",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cd8596f",
+   "id": "6ec84390",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f1a1c1a",
+   "id": "143df357",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6f5264c",
+   "id": "e4f5de50",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbe9c50e",
+   "id": "2fa3ed4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "736dcf8b",
+   "id": "031c1882",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cb5bc52",
+   "id": "824a43de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33cbb971",
+   "id": "6274c448",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d73e517f",
+   "id": "8903c31c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7807294e",
+   "id": "e27bf0e4",
    "metadata": {},
    "source": [
     "\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec64ad7e",
+   "id": "df5d6be3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18f96d3d",
+   "id": "29ddc577",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d418f4aa",
+   "id": "e14364fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c04b16f0",
+   "id": "d7af7712",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c9b3486",
+   "id": "f9f81d7f",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ec5aa3b",
+   "id": "f850b0b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "490bdd68",
+   "id": "fc0e7fbd",
    "metadata": {},
    "source": [
     "\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b12ed94",
+   "id": "88d6f806",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0d25b5d",
+   "id": "8d93918a",
    "metadata": {},
    "source": [
     "\n",
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "993d5ca4",
+   "id": "00b0c58c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cd2d131",
+   "id": "97da4045",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "296312a5",
+   "id": "19483f2a",
    "metadata": {},
    "source": [
     "\n",
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2da05318",
+   "id": "82f8e1fc",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6b1423e",
+   "id": "b3ad7939",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a91e4d6",
+   "id": "53aa3da6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e699c7d6",
+   "id": "7bec69e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37addfc5",
+   "id": "21c40683",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90b537d2",
+   "id": "7eee8f40",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a38ba92b",
+   "id": "6cb4b164",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ad100bd",
+   "id": "11943e22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2791189e",
+   "id": "f0a7aaf1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11d11121",
+   "id": "8318a09f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f5e1941",
+   "id": "673002a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,18 +840,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f74e4117",
+   "id": "4d677eaa",
    "metadata": {},
    "outputs": [],
    "source": [
     "for outer_cv_idx in range(len(nested_cv_results)):\n",
-    "    print(nested_cv_results.loc[outer_cv_idx, \"pipeline\"].results_.loc[0].round(3).to_dict())"
+    "    print(\n",
+    "        nested_cv_results.loc[outer_cv_idx, \"pipeline\"]\n",
+    "        .results_.loc[0]\n",
+    "        .round(3)\n",
+    "        .to_dict()\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42b56fd4",
+   "id": "6a6bf3fb",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -867,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb40ba88",
+   "id": "80770d79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,16 +885,20 @@
     "                    lambda name: name.startswith(\"load_mw_\"),\n",
     "                ),\n",
     "                skrub.selectors.filter_names(\n",
-    "                    lambda name: name.startswith(\"load_mw_\") or name.startswith(\"temperature_\"),\n",
+    "                    lambda name: name.startswith(\"load_mw_\")\n",
+    "                    or name.startswith(\"temperature_\"),\n",
     "                ),\n",
     "                skrub.selectors.filter_names(\n",
-    "                    lambda name: name.startswith(\"load_mw_\") or name.startswith(\"precipitation_\"),\n",
+    "                    lambda name: name.startswith(\"load_mw_\")\n",
+    "                    or name.startswith(\"precipitation_\"),\n",
     "                ),\n",
     "                skrub.selectors.filter_names(\n",
-    "                    lambda name: name.startswith(\"load_mw_\") or name.startswith(\"wind_speed_\"),\n",
+    "                    lambda name: name.startswith(\"load_mw_\")\n",
+    "                    or name.startswith(\"wind_speed_\"),\n",
     "                ),\n",
     "                skrub.selectors.filter_names(\n",
-    "                    lambda name: name.startswith(\"load_mw_\") or name.startswith(\"cloud_cover_\"),\n",
+    "                    lambda name: name.startswith(\"load_mw_\")\n",
+    "                    or name.startswith(\"cloud_cover_\"),\n",
     "                ),\n",
     "                # calendar features\n",
     "                skrub.selectors.filter_names(\n",
@@ -912,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67560190",
+   "id": "99d1007b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +939,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04c8d6b2",
+   "id": "06dce8e8",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9912711",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nested_cv_results = skrub.cross_validate(\n",
+    "    environment=predictions.skb.get_data(),\n",
+    "    pipeline=randomized_search,\n",
+    "    cv=ts_cv_5,\n",
+    "    scoring={\n",
+    "        \"r2\": get_scorer(\"r2\"),\n",
+    "        \"mape\": mape_scorer,\n",
+    "    },\n",
+    "    n_jobs=-1,\n",
+    "    return_pipeline=True,\n",
+    ").round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "387bf5c4",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": [
+    "nested_cv_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27489bd5",
    "metadata": {},
    "outputs": [],
    "source": []
